@@ -1,4 +1,4 @@
-typealias BaseArray Union(Array,CudaArray)
+typealias BaseArray{T,N} Union(Array{T,N},CudaArray{T,N})
 
 # SIMILAR! create an array l.(n) similar to a given one.  If l.(n)
 # exists check and resize if necessary.
@@ -22,13 +22,13 @@ issimilar(a,b)=((typeof(a)==typeof(b)) && (size(a)==size(b)))
 # issimilar2(a,b)=((eltype(a)==eltype(b)) && (isongpu(a)==isongpu(b)) && (size2(a)==size2(b)))
 
 # Here are some convenience functions for generalized columns:
+# We consider a 1-D array a single column:
 
-csize(a)=size(a)[1:end-1]
-csize(a,n)=tuple(csize(a)..., n)
-clength(a)=stride(a,ndims(a))
-ccount(a)=size(a,ndims(a))
-
-size2(y)=(nd=ndims(y); (nd==1 ? (length(y),1) : (stride(y, nd), size(y, nd))))
+csize(a)=(ndims(a)==1 ? size(a) : size(a)[1:end-1])
+csize(a,n)=tuple(csize(a)..., n) # size if you had n columns
+clength(a)=(ndims(a)==1 ? length(a) : stride(a,ndims(a)))
+ccount(a)=(ndims(a)==1 ? 1 : size(a,ndims(a)))
+size2(y)=(nd=ndims(y); (nd==1 ? (length(y),1) : (stride(y, nd), size(y, nd)))) # size as a matrix
 
 accuracy(y,z)=mean(findmax(y,1)[2] .== findmax(z,1)[2])
 
