@@ -1,3 +1,11 @@
+2015-07-18  Deniz Yuret  <dyuret@ku.edu.tr>
+
+	* src/net.jl: TODO: replace ccopy in predict with ccat.  No need
+	for ccopy.
+
+	* test/testdense.jl: TODO: add colops and linalg? tests.  Write
+	testsparse.
+
 2015-07-17  Deniz Yuret  <dyuret@ku.edu.tr>
 
 	* BUGS:
